get my classes
